tests/ui/frontmatter/fence-unclosed-6.stderr
error: unclosed frontmatter
  --> $DIR/fence-unclosed-6.rs:1:1
   |
LL | / ---
LL | |
LL | | 🦀---
LL | |  ---
...  |
LL | |
   | |_^
   |
note: frontmatter opening here was not closed
  --> $DIR/fence-unclosed-6.rs:1:1
   |
LL | ---
   | ^^^

error: aborting due to 1 previous error

